Fix #108495: Pasting a material crashes